@@ -7,6 +7,9 @@ The master branch will rely on the Git repository history.
 
 2020-11-01
 
+ - In the process of removing dependencies to the beancount.ops.holdings module,
+   significantly sped up the net-worth-over-time script by using simple
+   aggregation to an inventory (which is how it should be done).
  - Allow balance_by_account() method to compress positions that aren't booked,
    as an option.
  - Added split() method to Inventory, like segregate_units but with no
